[workspace]
members = [
  "2015/day1",
  "2015/day2",
  "2015/day3",
  "2015/day4",
  "2015/day5",
  "2015/day6",
  "2015/day7",
  "2015/day8",
  "2015/day9",
  "2015/day10",
  "2015/day11",
  "2015/day12",
  "2015/day13",
  "2015/day14",
  "2015/day15",
  "2015/day16",
  "2015/day17",
  "2015/day18",
  "2015/day19",
  "2015/day20",
  "2015/day21",
  "2015/day22",
  "2015/day23",
  "2015/day24",
  "2015/day25",
  "2016/day1",
  "2016/day2",
  "2016/day3",
  "2016/day4",
  "2016/day5",
  "2016/day6",
  "2016/day7",
  "2016/day8",
  "2016/day9",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sam Cordry (samcordry@gmail.com)"]

[workspace.dependencies]
md-5 = "0.10.6"
itertools = "0.14.0"
serde_json = "1.0.140"
divisors = "0.2.1"
